Handle conditionals in parser